[metadata]
name = gridtools-cpp
author = ETH Zurich
author_email = gridtools@cscs.ch
license = BSD 3-Clause License
license_files = file: LICENSE
url = https://gridtools.github.io
project_urls =
    Source Code = https://github.com/GridTools/gridtools

[options]
zip_safe = False

python_requires = >= 3.8
install_requires = 
  cmake>=3.18.1


[tools:isort]
line_length = 100

[flake8]
max-line-length = 100
